- another fix for Automatically inform user about session time out (bnc#558026)

--- a/webclient/app/sass/style.sass
+++ b/webclient/app/sass/style.sass
@@ -197,8 +197,8 @@ ul li
     float: right
     vertical-align: bottom
  
- 
-#idletimeout 
+
+#timeoutMessage 
   display: none
   font-size: 16px
   font-weight: bold
@@ -220,7 +220,19 @@ ul li
     position: absolute
     top: 0px
     float: left
-    
+
+/*#progress-bar 
+  width: 100%
+  overflow-x: hidden
+  top: 0
+  left: 0
+  padding: 0px
+  display: none
+  
+/*#progress-level 
+  background-color: #abdf3f 
+  height: 3px
+
 #content
   h3
     font-size: 1.7em
