- show warning message 5 minutes before the session expires - fix for SLE_11_SP1 i586 broken build (ActionView::TemplateError: undefined method `to_i'), class check for expiration date added

--- a/webclient/app/views/layouts/main.rhtml
+++ b/webclient/app/views/layouts/main.rhtml
@@ -61,11 +61,12 @@
  
   <script type="text/javascript">
     $(document).ready(function() {
-      var expirationDate ="<% if session[:expires] !=nil %><%=session[:expires].to_time.to_i %><%end%>"; 
-      sessionTimeout(expirationDate);
+        <% if session[:expires] !=nil && session[:expires].class == Time %>
+	  var expirationDate = "<%=session[:expires].to_time.to_i %>";
+	  sessionTimeout(expirationDate);
+	<%end%>
     });
   </script>
-
 </head>
   <body id="shell" onload="">
     <div id='browserWarning' style="display: none">
@@ -157,7 +158,6 @@
   
       <!-- debug info session tieout -->
       <!-- <fieldset class="example"><div class="timer_logpanel">dd</div></fieldset> -->
-      
       <%= yield %>
     </div>
 
