- added missing validation check before blocking UI "Improve the javascript code for disconnection of Submit button after form is submited" (bnc#602374) - this fix works only with newer version of jqueryDisableOnSubmit.js (12.08.2010) script - webyast-time-ui version 0.1.16

--- a/plugins/time/app/views/time/index.rhtml
+++ b/plugins/time/app/views/time/index.rhtml
@@ -43,10 +43,6 @@
   <% javascript_tag do -%>
     $(document).ready( function() {
       $("#date_date").datepicker( { dateFormat: 'dd/mm/yy'} );
-
-      <!-- disable whole form on submit -->
-      var message = "<%= _("Please wait") -%>";
-      disableOnSubmit("timeSubmit", message);
     });
   <% end -%>
 
@@ -71,6 +67,11 @@
 				currenttime: true
 			 }
 		  },
+		  submitHandler: function(form) {
+			var message = "<%= _("Please wait") -%>";
+			disableFormOnSubmit(message);
+                        form.submit();
+                  },
 		  success: "valid",
 		  messages: {
 			 ntp_server: {
