- added blockUI functionality (block only current form on submit and delete, the other repositories in the list are not blocked and can be edited by user) - release webyast-software-ui 0.2.3

--- a/plugins/software/app/views/repositories/add.html.erb
+++ b/plugins/software/app/views/repositories/add.html.erb
@@ -66,7 +66,12 @@
    // validate the form
 	$("#repositoryForm").validate({
 	  onkeyup: function(element) { this.element(element); },
-	  success: "valid"	  
+	  success: "valid",
+	  submitHandler: function(form) {
+	    var message = "<%= _("Please wait") -%>";
+	    disableFormOnSubmit(message);
+	    form.submit();
+	  }
 	});
 
 	// set custom translatable messages
