- Improve the javascript code for disconnection of Submit button after form is submited (bnc#602374) - webyast-users-ui 0.2.2

--- a/plugins/users/app/views/groups/index.html.erb
+++ b/plugins/users/app/views/groups/index.html.erb
@@ -168,9 +168,22 @@
     
     <div class="nav-buttons">
     <div id="progress_<%= group.cn -%>" style="display: none; margin-bottom: 10px"><img src="/images/working.gif" alt="Working"/><span style="vertical-align: 50%; margin-left: 5px">...Wait...</span></div>
-      <%= submit_tag _("Save"), :onclick=>"return $('#form_" + group.old_cn + "').valid();" %>
+      <% message = _('Please wait')%>
+      <%= submit_tag _("Save"), 
+      :onclick=>"return $('#form_" + group.old_cn + "').validate({
+	submitHandler: function(form) {
+	var message = '#{message}'; 
+	disableFormOnSubmit(message); 
+	form.submit();
+      }
+
+      });" %>
+    
+      
+
+
       <% if @permissions[:groupdelete] %>
-      <span onclick="delete_handler(this, '#progress_<%= group.cn -%>');">
+      <span onclick="delete_handler(this, '#progress_<%= group.cn -%>', '<%= _("Please wait") -%>');">
         <%= link_to _("Delete"),
                     {:action => 'destroy', :id => group.cn},
                     {:confirm => _("Are you sure to delete group '%s'?") % group.cn, :method => :destroy, :class => :button} %>
