--- a/plugins/users/app/views/users/_user_form.erb
+++ b/plugins/users/app/views/users/_user_form.erb
@@ -146,7 +146,7 @@
     <div id="progress_<%= (new ? "" : user.uid) -%>" style="display: none; margin-bottom: 10px"><img src="/images/working.gif" alt="Working"/><span style="vertical-align: 50%; margin-left: 5px">...Wait...</span></div>
        <%= submit_tag _("Save"), :onclick=>"return user_validation(this, '"+ (new ? "" : user.uid) +"');", :disabled => disabled  %>
        <% if @permissions[:userdelete] && !new %>
-         <span onclick="delete_handler(this, '#progress_<%= user.uid -%>');">
+         <span onclick="delete_handler(this, '#progress_<%= user.uid -%>', '<%= _('Please wait') -%>');">
            <%= link_to _("Delete"),
                        {:action => 'destroy', :id => user.uid},
                        {:confirm => _("Are you sure to delete user '%s'?") % user.uid, :method => :destroy, :class => :button} %>
