- Improve the javascript code for disconnection of Submit button after form is submited (bnc#602374) - webyast-roles-ui 0.2.0

--- a/plugins/roles/app/views/roles/index.rhtml
+++ b/plugins/roles/app/views/roles/index.rhtml
@@ -136,7 +136,17 @@
         e.preventDefault();
         $("#create_role_dialog").dialog('open');
       });
+
+      // disable whole form on submit
+      $("#roles_submit_button").click( function () {
+	var message = "<%= _("Please wait") -%>";
+	disableFormOnSubmit(message);
+      });
     });
+
+    
+    
+    
   <% end %>
 
 <style>
@@ -239,7 +249,7 @@
       </fieldset>
     </div>
     <div class="nav-buttons">
-      <%= form_next_button %>
+      <%= form_next_button (:id=>'roles_submit_button') %>
       <%= form_str_spacer %>
       <%= form_back_button %>
     </div>
