- Improve the javascript code for disconnection of Submit button after form is submited (bnc#602374) / network module - webyast-network-ui 0.2.0

--- a/plugins/network/app/views/network/index.html.erb
+++ b/plugins/network/app/views/network/index.html.erb
@@ -167,6 +167,11 @@
 				searchdomains: <%= jss _("Enter a valid domain name") -%> 
 			 }
 		  },
+		  submitHandler: function(form) {
+			var message = "<%= _("Please wait") -%>";
+			disableFormOnSubmit(message);
+                        form.submit();
+                  },
 		  success: "valid"  
 		});
 		
