--- a/plugins/mail/app/views/mail/index.html.erb
+++ b/plugins/mail/app/views/mail/index.html.erb
@@ -37,7 +37,12 @@
     $(document).ready(function() {
       validateDomainNameWithPortNumber("smtp_server");
       $("#mailForm").validate({
-	onkeyup: function(element) { this.element(element); }
+	onkeyup: function(element) { this.element(element); },
+	submitHandler: function(form) {
+	  var message = "<%= _("Please wait") -%>";
+	  disableFormOnSubmit(message);
+	  form.submit();
+	}
       });
        // make the error message translatable - override the default messsage
        $.extend($.validator.messages, {
