--- a/plugins/roles/app/views/roles/index.rhtml
+++ b/plugins/roles/app/views/roles/index.rhtml
@@ -21,11 +21,11 @@
 #++
 %>
 <% content_for :head do %>
-  <% if RAILS_ENV == 'production' %>
-    <%= javascript_include_tag "min/users-group-min.js" %>
+<% if JSMIN == true %>  
+    <%= javascript_include_tag "users-min.js"-%>
   <% else %>
     <%= javascript_include_tag "select_dialog.js" %>
-  <% end%>
+  <% end %>
 <% end%>
 
 <% content_for :before_script do %>
