--- a/plugins/network/app/views/network/index.html.erb
+++ b/plugins/network/app/views/network/index.html.erb
@@ -88,7 +88,13 @@
 	  			focus_field("ip");
 				  return false;
 		  	}
-      }
+        } else {
+           if(dnsValid.length != dnsErrors.length) {
+              focus_field("name");
+              return false;
+           }
+        }
+
 
       disable_forms();
 		 	$('#progress').show();
