--- a/plugins/time/app/views/time/index.rhtml
+++ b/plugins/time/app/views/time/index.rhtml
@@ -22,7 +22,8 @@
 <% disabled = !@permissions[:write] %>
 <% ntp_available = Ntp.available? %>
 <% content_for :head do %>
-  <%= javascript_include_tag :defaults %>
+  <%= javascript_include_tag "jrails.js" %>
+<!--   <%= javascript_include_tag :defaults %> -->
   <style type="text/css">
 	 label.error {
 		float:none;
@@ -45,9 +46,10 @@
       $("#date_date").datepicker( { dateFormat: 'dd/mm/yy'} );
     });
   <% end -%>
-
+  
   <% if JSMIN == false %>
     <%= javascript_include_tag "validation.js" %>
+    
   <% end %>
   
   <script type="text/javascript">
