- translated text in JavaScript is not escaped (bnc#604224) - webyast-base-ui 0.2.13

--- a/webclient/app/views/main/_select_language.html.erb
+++ b/webclient/app/views/main/_select_language.html.erb
@@ -35,7 +35,7 @@
     	     autoOpen: false,
 	     resizable: false,
     	     height: 'auto',
-	     title: "<%= _("Language Selection")%>",
+	     title: <%= jss _("Language Selection")%>,
     	     modal: true
            });
            $('#language_icons').dialog('open');
