--- a/plugins/activedirectory/app/views/activedirectory/index.html.erb
+++ b/plugins/activedirectory/app/views/activedirectory/index.html.erb
@@ -29,7 +29,7 @@
       $("#activedirectoryForm").validate();
       // make the error message translatable - override the default messsage
       $.extend($.validator.messages, {
-	    required: "<%= jss _("This field is required.") -%>",
+	    required: <%= jss _("This field is required.") -%>,
       });
     });
     $(document).ready(function() {
