--- a/plugins/firewall/app/views/firewall/index.rhtml
+++ b/plugins/firewall/app/views/firewall/index.rhtml
@@ -47,7 +47,7 @@
     }).hide();
 
     $("#firewallSubmitButton").click(function(){
-      var message = "<%= _("Please wait") -%>";
+      var message = <%= jss _("Please wait") -%>;
       disableFormOnSubmit(message);    
     });
   });
@@ -55,7 +55,7 @@
   function validateNeededServices() {
     var use_firewall_old = <%= @firewall.use_firewall ? "true" : "false" %>;
     var needed_services = <%= @needed_services_js %>;
-    var confirm_text = <%= "\""+_("Some of needed services (%s) are going to be blocked. WebYaST may not be usable anymore. Do you really want to block them?")+"\"" %>;
+    var confirm_text = <%= jss _("Some of needed services (%s) are going to be blocked. WebYaST may not be usable anymore. Do you really want to block them?") %>;
     function isBlockedAndWasAllowed(service) {
       var is_blocked  = ( $("#fw_services_values input[name='"+service.input_name+"']")[0].value == 'false' );
       return is_blocked && (service.allowed || ! use_firewall_old);
